gopls/mcpbridge/test/testdata/projects/error/missing_import_ref.go

package main

func MissingImport() {
	make(chan int)
}
